[package]
name = "bencode_rs"
version = "0.1.0"
authors = ["jasilven <jasilven@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jasilven/bencode_rs"
repository = "https://github.com/jasilven/bencode_rs"
description = "Simple and minimal bencode stream parser."
keywords = ["bencode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
